--- a/Feed Forward Neural Network for MNIST.ipynb
+++ b/Feed Forward Neural Network for MNIST.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,13 @@
      "output_type": "stream",
      "text": [
       "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n"
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -27,6 +33,70 @@
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_image = mnist.train.images\n",
+    "training_labels = mnist.train.labels\n",
+    "\n",
+    "test_images = mnist.test.images\n",
+    "test_labels = mnist.test.labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
