--- a/project_files/MNIST on Neural Network.ipynb
+++ b/project_files/MNIST on Neural Network.ipynb
@@ -396,30 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() takes at least 3 arguments (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-75-a32bebe7bc34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_step\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMomentumOptimizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mminimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() takes at least 3 arguments (2 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_step = tf.train.MomentumOptimizer(0.5).minimize(cross_entropy)"
+    "train_step = tf.train.MomentumOptimizer(0.5, 0.5).minimize(cross_entropy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -441,33 +429,29 @@
      "text": [
       "0.098\n",
       "0.1135\n",
+      "0.1028\n",
+      "0.1032\n",
+      "0.1032\n",
+      "0.101\n",
+      "0.098\n",
       "0.1135\n",
+      "0.098\n",
+      "0.1135\n",
+      "0.101\n",
+      "0.101\n",
+      "0.098\n",
+      "0.1028\n",
       "0.101\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
+      "0.101\n",
       "0.1135\n",
       "0.1135\n",
+      "0.1009\n",
       "0.1028\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
@@ -477,18 +461,22 @@
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
-      "0.1135\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1028\n",
+      "0.1009\n",
       "0.0958\n",
+      "0.1028\n",
+      "0.0892\n",
+      "0.101\n",
+      "0.1135\n",
       "0.101\n",
       "0.1135\n",
       "0.1135\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.0974\n",
       "0.1135\n",
       "0.1028\n",
-      "0.1135\n"
+      "0.1135\n",
+      "0.1028\n"
      ]
     }
    ],
