--- a/project_files/MNIST on Neural Network.ipynb
+++ b/project_files/MNIST on Neural Network.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -238,56 +238,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.098\n",
-      "0.8969\n",
-      "0.9042\n",
-      "0.9121\n",
-      "0.9157\n",
-      "0.9148\n",
-      "0.9139\n",
-      "0.9159\n",
-      "0.917\n",
-      "0.918\n",
-      "0.914\n",
-      "0.9183\n",
-      "0.9203\n",
-      "0.9164\n",
-      "0.9167\n",
-      "0.9185\n",
       "0.9205\n",
-      "0.9142\n",
-      "0.9228\n",
-      "0.9201\n",
+      "0.9193\n",
+      "0.9147\n",
       "0.9186\n",
-      "0.9212\n",
-      "0.9197\n",
-      "0.9181\n",
-      "0.9175\n",
-      "0.9239\n",
+      "0.9164\n",
+      "0.9205\n",
+      "0.9185\n",
+      "0.9203\n",
+      "0.9194\n",
+      "0.9158\n",
+      "0.9169\n",
+      "0.9172\n",
+      "0.9196\n",
+      "0.919\n",
       "0.9207\n",
-      "0.92\n",
-      "0.9216\n",
-      "0.9212\n",
-      "0.9208\n",
-      "0.9226\n",
-      "0.9201\n",
-      "0.9214\n",
-      "0.9237\n",
-      "0.923\n",
-      "0.9219\n",
-      "0.9221\n",
-      "0.9232\n",
-      "0.9222\n",
-      "0.9244\n",
-      "0.9201\n",
-      "0.9181\n",
-      "0.9246\n",
-      "0.9227\n",
-      "0.9231\n",
-      "0.9241\n",
+      "0.9233\n",
+      "0.9206\n",
       "0.9228\n",
+      "0.9217\n",
+      "0.9214\n",
+      "0.9164\n",
+      "0.9229\n",
+      "0.9207\n",
+      "0.9224\n",
+      "0.924\n",
+      "0.9186\n",
+      "0.9205\n",
+      "0.9213\n",
+      "0.9219\n",
+      "0.9262\n",
+      "0.9227\n",
+      "0.9219\n",
+      "0.9164\n",
+      "0.9178\n",
+      "0.9226\n",
+      "0.921\n",
+      "0.9219\n",
+      "0.9193\n",
+      "0.9207\n",
+      "0.9221\n",
+      "0.9235\n",
+      "0.919\n",
       "0.922\n",
-      "0.9231\n"
+      "0.9238\n",
+      "0.923\n",
+      "0.9218\n",
+      "0.9203\n",
+      "0.924\n",
+      "0.9273\n",
+      "0.9163\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -396,18 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train_step = tf.train.MomentumOptimizer(0.5, 0.5).minimize(cross_entropy)"
+    "train_step = tf.train.GradientDescentOptimizer(0.5).minimize(cross_entropy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -429,54 +429,54 @@
      "text": [
       "0.098\n",
       "0.1135\n",
-      "0.1028\n",
-      "0.1032\n",
-      "0.1032\n",
-      "0.101\n",
-      "0.098\n",
-      "0.1135\n",
-      "0.098\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.101\n",
-      "0.098\n",
-      "0.1028\n",
-      "0.101\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.1135\n",
       "0.1135\n",
       "0.1009\n",
+      "0.1135\n",
+      "0.101\n",
+      "0.1028\n",
+      "0.098\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.101\n",
+      "0.1135\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.101\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1028\n",
       "0.1028\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.1028\n",
       "0.1135\n",
       "0.1135\n",
       "0.1135\n",
-      "0.1009\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
       "0.0958\n",
-      "0.1028\n",
-      "0.0892\n",
+      "0.1135\n",
+      "0.1135\n",
       "0.101\n",
       "0.1135\n",
+      "0.1135\n",
       "0.101\n",
       "0.1135\n",
       "0.1135\n",
-      "0.1028\n",
       "0.1135\n",
-      "0.0974\n",
       "0.1135\n",
-      "0.1028\n",
       "0.1135\n",
-      "0.1028\n"
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n"
      ]
     }
    ],
