--- a/project_files/MNIST on Neural Network.ipynb
+++ b/project_files/MNIST on Neural Network.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -78,88 +78,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55000, 784)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_images.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55000, 10)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_labels.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 784)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing_images.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 10)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing_labels.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784,)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_images[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_labels[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(784,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing_images[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "testing_labels[0].shape"
    ]
@@ -173,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -238,56 +326,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9205\n",
-      "0.9193\n",
-      "0.9147\n",
-      "0.9186\n",
-      "0.9164\n",
-      "0.9205\n",
-      "0.9185\n",
-      "0.9203\n",
+      "0.098\n",
+      "0.8943\n",
+      "0.9037\n",
+      "0.9083\n",
+      "0.9037\n",
+      "0.9094\n",
+      "0.9153\n",
+      "0.91\n",
+      "0.9179\n",
       "0.9194\n",
-      "0.9158\n",
-      "0.9169\n",
+      "0.917\n",
+      "0.9179\n",
+      "0.9189\n",
+      "0.9182\n",
+      "0.9194\n",
       "0.9172\n",
-      "0.9196\n",
-      "0.919\n",
+      "0.9153\n",
       "0.9207\n",
-      "0.9233\n",
-      "0.9206\n",
-      "0.9228\n",
-      "0.9217\n",
-      "0.9214\n",
-      "0.9164\n",
-      "0.9229\n",
-      "0.9207\n",
-      "0.9224\n",
-      "0.924\n",
-      "0.9186\n",
-      "0.9205\n",
-      "0.9213\n",
-      "0.9219\n",
-      "0.9262\n",
+      "0.9225\n",
       "0.9227\n",
-      "0.9219\n",
-      "0.9164\n",
-      "0.9178\n",
-      "0.9226\n",
-      "0.921\n",
-      "0.9219\n",
-      "0.9193\n",
-      "0.9207\n",
-      "0.9221\n",
-      "0.9235\n",
-      "0.919\n",
+      "0.9205\n",
+      "0.9237\n",
+      "0.9195\n",
+      "0.9223\n",
+      "0.9217\n",
+      "0.9197\n",
+      "0.9218\n",
+      "0.9211\n",
+      "0.9244\n",
       "0.922\n",
+      "0.9218\n",
+      "0.9213\n",
+      "0.9218\n",
       "0.9238\n",
       "0.923\n",
-      "0.9218\n",
-      "0.9203\n",
-      "0.924\n",
-      "0.9273\n",
-      "0.9163\n"
+      "0.9238\n",
+      "0.9231\n",
+      "0.921\n",
+      "0.9242\n",
+      "0.9235\n",
+      "0.923\n",
+      "0.922\n",
+      "0.9205\n",
+      "0.9207\n",
+      "0.9199\n",
+      "0.9229\n",
+      "0.9205\n",
+      "0.9206\n",
+      "0.9246\n",
+      "0.9221\n"
      ]
     }
    ],
@@ -304,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -312,22 +400,22 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Equal_59:0' shape=(?,) dtype=bool>"
+       "<tf.Tensor 'Equal_50:0' shape=(?,) dtype=bool>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(y_, 1))\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(yS, 1))\n",
     "correct_prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -335,10 +423,10 @@
     {
      "data": {
       "text/plain": [
-       "0.92379999"
+       "0.9242"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -418,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -428,53 +516,53 @@
      "output_type": "stream",
      "text": [
       "0.098\n",
+      "0.1028\n",
       "0.1135\n",
       "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1028\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.1028\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.1028\n",
+      "0.1135\n",
+      "0.101\n",
       "0.1009\n",
-      "0.1135\n",
-      "0.101\n",
       "0.1028\n",
+      "0.1135\n",
+      "0.0974\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1032\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
+      "0.1135\n",
       "0.098\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.1135\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1028\n",
-      "0.1028\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.0958\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.101\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
-      "0.1135\n",
+      "0.1032\n",
       "0.1135\n",
       "0.1135\n"
      ]
@@ -492,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +591,7 @@
        "0.1135"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
